# Yoinks

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/schwups/core/: base.py  exceptions.py  models.py  registry.py  wrapper.py
src/schwups/scripts/: _ytdlp_helpers.py  bunkr_script.py  example_script.py  soundcloud_script.py  youtube_script.py
src/schwups/ui/: app.py  path_suggester.py  theme.py
src/schwups/ui/screens/: link_screen.py  settings_screen.py  settings_screen.tcss
src/yoinks/: __main__.py
src/yoinks/core/: base.py  exceptions.py  models.py  registry.py  wrapper.py
src/yoinks/scripts/: example_script.py  youtube_script.py
src/yoinks/ui/: app.py  formatting.py  theme.py
src/yoinks/ui/screens/: link_screen.py  link_screen.tcss  settings_screen.py  settings_screen.tcss
tests/core/: test_registry.py  test_wrapper.py
tests/scripts/: test_bunkr_script.py  test_example_script.py  test_soundcloud_script.py  test_youtube_script.py
tests/ui/: test_app_flow.py  test_formatting.py  test_theme.py
