[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schwups"
version = "0.1.0"
description = "TUI application for downloading videos from common sites"
requires-python = ">=3.11"
dependencies = [
    "textual",
    "yt-dlp",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[project.scripts]
schwups = "schwups.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/schwups"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
